--- a/css/app.css
+++ b/css/app.css
@@ -3674,7 +3674,7 @@ ul {
   margin-bottom: 15px; }
 
 .week-heading {
-  margin-top: 60px;
+  margin-top: 40px;
   text-align: center;
   color: #144057;
   font-family: "Maven Pro", sans-serif;
@@ -3736,8 +3736,8 @@ ul {
   display: block; }
 
 .week {
-  padding: 20px 0px !important;
-  height: 180px; }
+  padding: 10px 0px 10px 0px !important;
+  height: 140px; }
 
 @media (min-width: 40em) and (max-width: 63.9375em) {
   .announcement {
@@ -3760,7 +3760,7 @@ ul {
   .desktop-only {
     display: none; }
   .week {
-    height: 220px; } }
+    height: 160px; } }
 
 .course_schedule {
   font-family: "Maven Pro", sans-serif;
@@ -3785,8 +3785,10 @@ ul {
 .assignment {
   font-family: "Source Sans Pro", sans-serif;
   font-weight: 400;
-  color: #ff500a;
-  margin-top: 10px; }
+  color: #ff500a; }
+
+.lecture {
+  margin-bottom: 7px; }
 
 .example {
   margin-bottom: 22px; }
